MCA Dev/src/objects/FO_DEW_Calculate_Percentage_Of__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Opportunity_Field_API_Name__c</fullName>
        <label>Opportunity Field API Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Percentage_Of_Value__c</fullName>
        <label>Percentage Of Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receivable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Receivable</label>
        <type>Checkbox</type>
    </fields>
    <label>FO DEW Calculate Percentage Of</label>
</CustomObject>